<resources>
    <string name="app_name">KLMDemoApp</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet">No internet</string>
    <string name="txt_flight_number">Flight Number</string>
    <string name="txt_flight_date">Flight Date</string>
    <string name="txt_origin">Origin</string>
    <string name="txt_search">Search</string>
    <string name="txt_destination">Destination</string>
    <string name="txt_status">Status</string>
    <string name="txt_departure">Departure</string>
    <string name="txt_schedule">Scheduled</string>
    <string name="txt_terminal">Terminal</string>
    <string name="txt_arrival">Arrival</string>
    <string name="txt_uber_info">A reminder to book your Uber will be\nsent few hours before departure</string>
    <string name="txt_uber_reminder_btn">Remind me to book uber</string>
    <string name="txt_journey">Journey:</string>
    <string name="txtdep_gate">Dep Gate:</string>
    <string name="txt_something_went_wrong">Something went wrong</string>
    <string name="error_date_empty">Date cannot be empty</string>
    <string name="error_destination_empty">Destination cannot be empty</string>
    <string name="error_origin_empty">Origin cannot be empty</string>
    <string name="error_destination_invalid">Invalid Destination</string>
    <string name="error_origin_invalid">Invalid Origin</string>
    <string name="txt_search_flights">Search Flight Status</string>
    <string name="txt_search_flight_on_routes">Search Flights</string>
    <string name="txt_search_flight_status">Check Flight Status</string>
    <string name="txt_uber_reminder_set">Reminder set for cab booking</string>
    <string name="txt_already_departed">Already Departed</string>
    <string name="txt_search_destination">Search Destinations</string>
    <string name="txt_airport">Airport</string>
    <string name="txt_country">Country</string>
    <string name="txt_region">Region</string>
    <string name="txt_language">Language</string>
    <string name="txt_time_zone">Time Zone</string>
    <string name="txt_weather">Weather</string>
    <string name="txt_temprature">Temprature</string>
    <string name="txt_travel">Travel Guide</string>
    <string name="txt_destination_search_hint">Search any destination</string>
    <string name="txt_show_details">Show Details</string>
    <string name="txt_image_loading_placeholder">* Image Loading *</string>
</resources>
